# Antigravity-Manager

./: .containerignore  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  Containerfile  Justfile  README.md  compose.yaml  eslint.config.js  justfile  package-lock.json  package.json  package.json.bak  vite.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
antigravity-server/: Cargo.toml
antigravity-server/src/: api.rs  main.rs  state.rs
antigravity-vps-cli/: Cargo.toml
antigravity-vps-cli/src/: main.rs  ssh_client.rs
crates/antigravity-core/: Cargo.toml
crates/antigravity-core/src/: error.rs  lib.rs
crates/antigravity-core/src/models/: config.rs  mod.rs
crates/antigravity-core/src/modules/: account.rs  config.rs  logger.rs  migration.rs  mod.rs  oauth.rs  process.rs  proxy_db.rs  quota.rs  vscode.rs
crates/antigravity-core/src/proxy/: config.rs  mod.rs  monitor.rs  rate_limit.rs  server.rs  signature_cache.rs  token_manager.rs
crates/antigravity-core/src/proxy/common/: model_mapping.rs
crates/antigravity-core/src/proxy/handlers/: claude.rs  common.rs  gemini.rs  openai.rs
crates/antigravity-core/src/proxy/mappers/claude/: mod.rs  request.rs  response.rs  utils.rs
crates/antigravity-core/src/proxy/mappers/gemini/: wrapper.rs
crates/antigravity-core/src/proxy/mappers/openai/: streaming.rs
crates/antigravity-core/src/proxy/middleware/: auth.rs  monitor.rs
crates/antigravity-core/src/proxy/upstream/: client.rs
crates/antigravity-core/src/utils/: http.rs  mod.rs  paths.rs  protobuf.rs
crates/antigravity-shared/: Cargo.toml
crates/antigravity-shared/src/: lib.rs
crates/antigravity-shared/src/models/: account.rs  mod.rs  quota.rs  stats.rs  token.rs
crates/antigravity-shared/src/proxy/: config.rs
crates/antigravity-shared/src/utils/: http.rs
deploy/grafana/: adaptive-rate-limiting-dashboard.json  alert-rules.yaml  antigravity-dashboard.json
deploy/quadlet/: antigravity-data.volume  antigravity-server.container
deploy/scripts/: entrypoint.sh  setup-vps.sh
deploy/systemd/: antigravity-monitor.service  antigravity-monitor.timer
docs/: README.md  adaptive-rate-limiting.md  admin-api.md  alerting.md  dashmap-optimization.md  memory-profiling.md  operations.md
docs/proxy/: adaptive-rate-limiting.md  admin-api.md
node_modules.bak/: .package-lock.json
scripts/: analyze-metrics.sh  deploy-vps.sh  install-hooks.sh  metrics-quick.sh  monitor-vps.sh
src/: App.tsx  i18n.ts
src-leptos/: Cargo.toml  Trunk.toml  index.html
src-leptos/src/: actions.rs  api.rs  app.rs  lib.rs  main.rs  tauri.rs  types.rs
src-leptos/src/components/: account_card.rs  account_row.rs  button.rs  collapsible_card.rs  mod.rs  pagination.rs  select.rs  sidebar.rs  stats_card.rs
src-leptos/src/pages/: accounts.rs  dashboard.rs  mod.rs  monitor.rs  proxy.rs  settings.rs
src-leptos/styles/: main.css
src-slint/: Cargo.toml
src-slint/src/: main.rs
src-slint/src/backend/: mod.rs
src-slint/src/ui/: accounts.slint  app.slint  dashboard.slint  monitor.slint  settings.slint
src-slint/src/ui/components/: sidebar.slint  stats-card.slint  theme.slint
src-slint/ui/: main.slint
src-tauri/: Cargo.toml  clippy.toml  tauri.conf.json  tauri.conf.prod.json
src-tauri/.cargo/: config.toml
src-tauri/benches/: proxy_benches.rs
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: autostart.rs  mod.rs  proxy.rs
src-tauri/src/models/: account.rs  mod.rs  proxy_config.rs  quota.rs  token.rs
src-tauri/src/modules/: account.rs  config.rs  db.rs  logger.rs  migration.rs  mod.rs  oauth.rs  oauth_server.rs  process.rs  quota.rs  tray.rs
src-tauri/src/proxy/: adaptive_limit.rs  alerting.rs  config.rs  db.rs  error.rs  health.rs  mod.rs  monitor.rs  project_resolver.rs  prometheus.rs  rate_limit.rs  security.rs  server.rs  server_logger.rs  session_manager.rs  smart_prober.rs  sticky_config.rs  telemetry.rs  token_manager.rs  zai_vision_tools.rs
src-tauri/src/proxy/common/: background_task.rs  circuit_breaker.rs  coalescing.rs  hedging.rs  json_schema.rs  mod.rs  model_mapping.rs  perf.rs  retry.rs  sampling.rs  scheduler.rs  sse.rs
src-tauri/src/proxy/handlers/: claude.rs  common.rs  gemini.rs  helpers.rs  mcp.rs  mod.rs  openai.rs
src-tauri/src/proxy/mappers/: common_utils.rs  mod.rs  signature_store.rs  stream_resilience.rs
src-tauri/src/proxy/mappers/claude/: mod.rs  request.rs  response.rs  streaming.rs  utils.rs
src-tauri/src/proxy/mappers/gemini/: wrapper.rs
src-tauri/src/proxy/mappers/openai/: request.rs  response.rs  streaming.rs
src-tauri/src/proxy/middleware/: auth.rs  cors.rs  logging.rs  mod.rs  monitor.rs  request_id.rs
src-tauri/src/proxy/providers/: zai_anthropic.rs
src-tauri/src/proxy/tests/: comprehensive.rs  handler_tests.rs  integration_tests.rs  mock_http_tests.rs  mod.rs
src-tauri/src/proxy/upstream/: client.rs  models.rs  retry.rs
src-tauri/src/utils/: http.rs  mod.rs  protobuf.rs
src/components/accounts/: AccountCard.test.tsx  AccountCard.tsx  AccountDetailsDialog.test.tsx  AccountDetailsDialog.tsx  AccountGrid.test.tsx  AccountGrid.tsx  AccountRow.test.tsx  AccountRow.tsx  AccountTable.tsx  AddAccountDialog.tsx
src/components/common/: BackgroundTaskRunner.tsx  HelpTooltip.test.tsx  ModalDialog.test.tsx  NetworkMonitor.tsx  Pagination.test.tsx  Pagination.tsx  ThemeManager.tsx  Toast.test.tsx  Toast.tsx  ToastContainer.test.tsx  ToastContainer.tsx
src/components/dashboard/: BestAccounts.test.tsx  BestAccounts.tsx  CurrentAccount.test.tsx  CurrentAccount.tsx  StatsCard.test.tsx
src/components/layout/: Layout.tsx  Navbar.test.tsx  Navbar.tsx
src/components/proxy/: ProxyMonitor.tsx
src/locales/: zh.json
src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  Monitor.tsx  Settings.tsx
src/services/: accountService.ts  configService.ts
src/stores/: networkMonitorStore.ts  useAccountStore.ts  useConfigStore.test.ts  useConfigStore.ts
src/utils/: cn.test.ts  error.test.ts  format.ts
