[package]
name = "antigravity-vps-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
russh = "0.56"
thiserror = "1.0"
anyhow = "1.0"
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
