[package]
name = "antigravity_tools"
version = "3.3.15"
description = "A Tauri App"
authors = ["you"]
license = "CC-BY-NC-SA-4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "antigravity_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = ["desktop"]
desktop = [
    "dep:tauri",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-fs",
    "dep:tauri-plugin-single-instance",
    "dep:tauri-plugin-autostart",
    "dep:image",
    "dep:tauri-build",
]
headless = []

[build-dependencies]
tauri-build = { version = "2", features = [], optional = true }

[dependencies]
# Desktop-only dependencies (Tauri ecosystem)
tauri = { version = "2", features = ["tray-icon", "image-png"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2.4.2", optional = true }
tauri-plugin-fs = { version = "2.4.4", optional = true }
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"], optional = true }
tauri-plugin-autostart = { version = "2.5.1", optional = true }
image = { version = "0.25.9", optional = true }

# Core dependencies (shared between desktop and headless)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["v4", "serde"] }
chrono = "0.4"
dirs = "5.0"
reqwest = { version = "0.12", features = ["json", "stream", "socks"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "time"] }
rusqlite = { version = "0.32", features = ["bundled"] }
base64 = "0.22"
sysinfo = "0.31"
tokio = { version = "1", features = ["full"] }
url = "2.5.7"
thiserror = "2.0.17"

# Proxy server dependencies
axum = { version = "0.8", features = ["multipart"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
eventsource-stream = "0.2"
dashmap = "6.1"
anyhow = "1.0"
futures = "0.3"
rand = "0.8"
async-stream = "0.3.6"
regex = "1.12.2"
once_cell = "1.19"
pin-project = "1.1"
bytes = "1.5"
memchr = "2.7"
tracing-appender = "0.2.4"
tracing-log = "0.2.0"
sha2 = "0.10"
lru = "0.12"
parking_lot = "0.12"
tower_governor = "0.8.0"

# Lints configuration (Rust 1.74+)
[lints.rust]
unsafe_code = "warn"

[lints.clippy]
# Lint groups need lower priority than individual lints
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Allow noisy lints
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
doc_markdown = "allow"
needless_pass_by_value = "allow"
struct_excessive_bools = "allow"
# Allow common patterns
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
cast_precision_loss = "allow"
unreadable_literal = "allow"

# Headless server binary for VPS/container deployment
[[bin]]
name = "antigravity-server"
path = "src/bin/server.rs"
required-features = []

# Release profile: optimize for size while maintaining performance
[profile.release]
opt-level = "s"        # Optimize for size (good balance of size/speed)
lto = true             # Link-Time Optimization for smaller binary
codegen-units = 1      # Single codegen unit for better optimization
panic = "abort"        # Smaller binary, no unwinding
strip = true           # Strip debug symbols

# Server-optimized profile for container builds
[profile.server]
inherits = "release"
opt-level = "z"        # Maximum size optimization for containers
lto = "fat"            # Aggressive LTO for smallest binary
