[package]
name = "antigravity-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types and models for Antigravity Manager (Frontend/Backend)"
license = "CC-BY-NC-SA-4.0"

[dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }
validator = { version = "0.18", features = ["derive"] }

